CHANGES.txt - 10/04/2000
------------------------

CHANGES IN CUPS V1.1.5

	- Minor code cleanup to remove extraneous compiler
	  warnings.
	- cupsTempFile() was using %p for the temporary
	  filename; this should have been %08x (just 8 digit
	  hex)
	- Deleting a printer with active print jobs would still
	  crash the server.
	- ippWrite() and ipp_write_file() didn't send the
	  correct value length for name-with-language and
	  text-with-language attributes.
	- Updated IPP code to support copied strings (that
	  should not be freed); this provides slightly more
	  efficient IPP server performance.
	- Updated PDF filter to Xpdf 0.91.
	- httpGets() could go into an infinite loop if a line
	  longer than the input buffer size was sent by a
	  client. This could be used in a Denial-of-Service
	  attack.
	- The lpstat and CUPS API functions now request only the
	  data required when getting the list of printer or
	  class information.  This should improve performance
	  with large numbers of printers on slower machines.


CHANGES IN CUPS v1.1.4

	- Makefile and configure script fixes.
	- **** Changed the default Printcap setting **** to
	  /etc/printcap. There are just too many people asking
	  why application XYZ doesn't see their printers!
	- The web admin interface now displays an error if it
	  can't get the list of printer drivers from cupsd.
	- The IPP backend was putting the copies option before
	  the other job options were set. This caused the IPP
	  request to contain attribute groups in the wrong
	  order, which prevented remote printing.
	- Added checks in scheduler to free memory used for
	  IPP requests and language information when closing
	  a client connection.
	- Fixed the duplex option in the HP LaserJet driver.  It
	  should now work with all LaserJet printers (and
	  compatibles)
	- The add-printer web interface didn't initialize the
	  "old info" data pointer, which caused random crashes
	  on many OS's.